# sfp

./: .gitignore  README.md  pyproject.toml
experiments/: bandwidth_basics.ipynb  sharded_matmul.ipynb
infra/: config.sh  connect.sh  create-vm.sh  delete-vm.sh  list-vms.sh
kernels/: __init__.py  matmul.py
kernels/examples/: all_gather.py  dsd.py  matmul.py  reduce_scatter.py
scripts/: setup-vm.sh
sfp/kernels/examples/: all_reduce.py  block_sparse_output.py  right_permute.py
sfp/utils/: __init__.py  benchmark.py  numerics.py  profiling.py
